# past

./: LICENCE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/past/: past.py  rules.py
tests/: test_linter.py
